...
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:background="@drawable/button_pressed"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
...
